y.output
Terminals unused in grammar

   VOID
   STAR
   DIV
   MOD
   RESERVED
   NEWLINE


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID OBRACE SubProgram CBRACE

    2 SubProgram: SubProgram FieldDecl
    3           | SubProgram MethodDecl
    4           | SubProgram SEMI
    5           | Empty

    6 FieldDecl: PUBLIC STATIC Type ID SubFieldDecl SEMI

    7 SubFieldDecl: SubFieldDecl COMMA ID
    8             | Empty

    9 MethodDecl: PUBLIC STATIC MethodHeader MethodBody

   10 MethodHeader: Type ID OCURV OptFormalParams CCURV

   11 OptFormalParams: FormalParams
   12                | Empty

   13 MethodBody: OBRACE SubMethodBody CBRACE

   14 SubMethodBody: SubMethodBody VarDecl
   15              | SubMethodBody Statement
   16              | Empty

   17 FormalParams: Type ID SubFormalParams
   18             | STRING OSQUARE CSQUARE ID

   19 SubFormalParams: SubFormalParams COMMA Type ID
   20                | Empty

   21 VarDecl: Type ID SubVarDecl SEMI

   22 SubVarDecl: COMMA ID SubVarDecl
   23           | Empty

   24 Type: BOOL
   25     | INT
   26     | DOUBLE

   27 Statement: OBRACE MultipleStatements CBRACE
   28          | IF OCURV Expr CCURV Statement ELSE Statement
   29          | IF OCURV Expr CCURV Statement
   30          | WHILE OCURV Expr CCURV Statement
   31          | DO Statement WHILE OCURV Expr CCURV SEMI
   32          | PRINT OCURV ExprStrlit CCURV SEMI
   33          | OptAMIPA SEMI
   34          | RETURN OptExpr SEMI

   35 MultipleStatements: Statement MultipleStatements
   36                   | Empty

   37 ExprStrlit: Expr
   38           | STRLIT

   39 OptAMIPA: Assignment
   40         | MethodInvocation
   41         | ParseArgs
   42         | Empty

   43 OptExpr: Expr
   44        | Empty

   45 Assignment: ID ASSIGN Expr

   46 MethodInvocation: ID OCURV OptExprCommaExprs CCURV

   47 MultipleCommaExpr: MultipleCommaExpr COMMA Expr
   48                  | Empty

   49 OptExprCommaExprs: Expr MultipleCommaExpr
   50                  | Empty

   51 ParseArgs: PARSEINT OCURV ID OSQUARE Expr CSQUARE CCURV

   52 OptDotLength: DOTLENGTH
   53             | Empty

   54 Expr: Assignment
   55     | MethodInvocation
   56     | ParseArgs
   57     | Expr AND Expr
   58     | Expr OR Expr
   59     | Expr EQ Expr
   60     | Expr GEQ Expr
   61     | Expr GT Expr
   62     | Expr LEQ Expr
   63     | Expr LT Expr
   64     | Expr NEQ Expr
   65     | PLUS Expr
   66     | MINUS Expr
   67     | NOT Expr
   68     | ID OptDotLength
   69     | OCURV Expr CCURV
   70     | BOOLLIT
   71     | DECLIT
   72     | REALLIT

   73 Empty: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOL (258) 24
BOOLLIT (259) 70
CLASS (260) 1
DO (261) 31
DOTLENGTH (262) 52
DOUBLE (263) 26
ELSE (264) 28
IF (265) 28 29
INT (266) 25
PARSEINT (267) 51
PRINT (268) 32
PUBLIC (269) 6 9
RETURN (270) 34
STATIC (271) 6 9
STRING (272) 18
VOID (273)
WHILE (274) 30 31
OCURV (275) 10 28 29 30 31 32 46 51 69
CCURV (276) 10 28 29 30 31 32 46 51 69
OBRACE (277) 1 13 27
CBRACE (278) 1 13 27
OSQUARE (279) 18 51
CSQUARE (280) 18 51
AND (281) 57
OR (282) 58
LT (283) 63
GT (284) 61
EQ (285) 59
NEQ (286) 64
LEQ (287) 62
GEQ (288) 60
PLUS (289) 65
MINUS (290) 66
STAR (291)
DIV (292)
MOD (293)
NOT (294) 67
ASSIGN (295) 45
SEMI (296) 4 6 21 31 32 33 34
COMMA (297) 7 19 22 47
RESERVED (298)
NEWLINE (299)
STRLIT (300) 38
DECLIT (301) 71
REALLIT (302) 72
ID (303) 1 6 7 10 17 18 19 21 22 45 46 51 68


Nonterminals, with rules where they appear

$accept (49)
    on left: 0
Program (50)
    on left: 1, on right: 0
SubProgram (51)
    on left: 2 3 4 5, on right: 1 2 3 4
FieldDecl (52)
    on left: 6, on right: 2
SubFieldDecl (53)
    on left: 7 8, on right: 6 7
MethodDecl (54)
    on left: 9, on right: 3
MethodHeader (55)
    on left: 10, on right: 9
OptFormalParams (56)
    on left: 11 12, on right: 10
MethodBody (57)
    on left: 13, on right: 9
SubMethodBody (58)
    on left: 14 15 16, on right: 13 14 15
FormalParams (59)
    on left: 17 18, on right: 11
SubFormalParams (60)
    on left: 19 20, on right: 17 19
VarDecl (61)
    on left: 21, on right: 14
SubVarDecl (62)
    on left: 22 23, on right: 21 22
Type (63)
    on left: 24 25 26, on right: 6 10 17 19 21
Statement (64)
    on left: 27 28 29 30 31 32 33 34, on right: 15 28 29 30 31 35
MultipleStatements (65)
    on left: 35 36, on right: 27 35
ExprStrlit (66)
    on left: 37 38, on right: 32
OptAMIPA (67)
    on left: 39 40 41 42, on right: 33
OptExpr (68)
    on left: 43 44, on right: 34
Assignment (69)
    on left: 45, on right: 39 54
MethodInvocation (70)
    on left: 46, on right: 40 55
MultipleCommaExpr (71)
    on left: 47 48, on right: 47 49
OptExprCommaExprs (72)
    on left: 49 50, on right: 46
ParseArgs (73)
    on left: 51, on right: 41 56
OptDotLength (74)
    on left: 52 53, on right: 68
Expr (75)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72, on right: 28 29 30 31 37 43 45 47 49 51 57 58 59 60 61 62 63
    64 65 66 67 69
Empty (76)
    on left: 73, on right: 5 8 12 16 20 23 36 42 44 48 50 53


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS . ID OBRACE SubProgram CBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . OBRACE SubProgram CBRACE

    OBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: CLASS ID OBRACE . SubProgram CBRACE

    $default  reduce using rule 73 (Empty)

    SubProgram  go to state 6
    Empty       go to state 7


State 6

    1 Program: CLASS ID OBRACE SubProgram . CBRACE
    2 SubProgram: SubProgram . FieldDecl
    3           | SubProgram . MethodDecl
    4           | SubProgram . SEMI

    PUBLIC  shift, and go to state 8
    CBRACE  shift, and go to state 9
    SEMI    shift, and go to state 10

    FieldDecl   go to state 11
    MethodDecl  go to state 12


State 7

    5 SubProgram: Empty .

    $default  reduce using rule 5 (SubProgram)


State 8

    6 FieldDecl: PUBLIC . STATIC Type ID SubFieldDecl SEMI
    9 MethodDecl: PUBLIC . STATIC MethodHeader MethodBody

    STATIC  shift, and go to state 13


State 9

    1 Program: CLASS ID OBRACE SubProgram CBRACE .

    $default  reduce using rule 1 (Program)


State 10

    4 SubProgram: SubProgram SEMI .

    $default  reduce using rule 4 (SubProgram)


State 11

    2 SubProgram: SubProgram FieldDecl .

    $default  reduce using rule 2 (SubProgram)


State 12

    3 SubProgram: SubProgram MethodDecl .

    $default  reduce using rule 3 (SubProgram)


State 13

    6 FieldDecl: PUBLIC STATIC . Type ID SubFieldDecl SEMI
    9 MethodDecl: PUBLIC STATIC . MethodHeader MethodBody

    BOOL    shift, and go to state 14
    DOUBLE  shift, and go to state 15
    INT     shift, and go to state 16

    MethodHeader  go to state 17
    Type          go to state 18


State 14

   24 Type: BOOL .

    $default  reduce using rule 24 (Type)


State 15

   26 Type: DOUBLE .

    $default  reduce using rule 26 (Type)


State 16

   25 Type: INT .

    $default  reduce using rule 25 (Type)


State 17

    9 MethodDecl: PUBLIC STATIC MethodHeader . MethodBody

    OBRACE  shift, and go to state 19

    MethodBody  go to state 20


State 18

    6 FieldDecl: PUBLIC STATIC Type . ID SubFieldDecl SEMI
   10 MethodHeader: Type . ID OCURV OptFormalParams CCURV

    ID  shift, and go to state 21


State 19

   13 MethodBody: OBRACE . SubMethodBody CBRACE

    $default  reduce using rule 73 (Empty)

    SubMethodBody  go to state 22
    Empty          go to state 23


State 20

    9 MethodDecl: PUBLIC STATIC MethodHeader MethodBody .

    $default  reduce using rule 9 (MethodDecl)


State 21

    6 FieldDecl: PUBLIC STATIC Type ID . SubFieldDecl SEMI
   10 MethodHeader: Type ID . OCURV OptFormalParams CCURV

    OCURV  shift, and go to state 24

    $default  reduce using rule 73 (Empty)

    SubFieldDecl  go to state 25
    Empty         go to state 26


State 22

   13 MethodBody: OBRACE SubMethodBody . CBRACE
   14 SubMethodBody: SubMethodBody . VarDecl
   15              | SubMethodBody . Statement

    BOOL      shift, and go to state 14
    DO        shift, and go to state 27
    DOUBLE    shift, and go to state 15
    IF        shift, and go to state 28
    INT       shift, and go to state 16
    PARSEINT  shift, and go to state 29
    PRINT     shift, and go to state 30
    RETURN    shift, and go to state 31
    WHILE     shift, and go to state 32
    OBRACE    shift, and go to state 33
    CBRACE    shift, and go to state 34
    ID        shift, and go to state 35

    $default  reduce using rule 73 (Empty)

    VarDecl           go to state 36
    Type              go to state 37
    Statement         go to state 38
    OptAMIPA          go to state 39
    Assignment        go to state 40
    MethodInvocation  go to state 41
    ParseArgs         go to state 42
    Empty             go to state 43


State 23

   16 SubMethodBody: Empty .

    $default  reduce using rule 16 (SubMethodBody)


State 24

   10 MethodHeader: Type ID OCURV . OptFormalParams CCURV

    BOOL    shift, and go to state 14
    DOUBLE  shift, and go to state 15
    INT     shift, and go to state 16
    STRING  shift, and go to state 44

    $default  reduce using rule 73 (Empty)

    OptFormalParams  go to state 45
    FormalParams     go to state 46
    Type             go to state 47
    Empty            go to state 48


State 25

    6 FieldDecl: PUBLIC STATIC Type ID SubFieldDecl . SEMI
    7 SubFieldDecl: SubFieldDecl . COMMA ID

    SEMI   shift, and go to state 49
    COMMA  shift, and go to state 50


State 26

    8 SubFieldDecl: Empty .

    $default  reduce using rule 8 (SubFieldDecl)


State 27

   31 Statement: DO . Statement WHILE OCURV Expr CCURV SEMI

    DO        shift, and go to state 27
    IF        shift, and go to state 28
    PARSEINT  shift, and go to state 29
    PRINT     shift, and go to state 30
    RETURN    shift, and go to state 31
    WHILE     shift, and go to state 32
    OBRACE    shift, and go to state 33
    ID        shift, and go to state 35

    $default  reduce using rule 73 (Empty)

    Statement         go to state 51
    OptAMIPA          go to state 39
    Assignment        go to state 40
    MethodInvocation  go to state 41
    ParseArgs         go to state 42
    Empty             go to state 43


State 28

   28 Statement: IF . OCURV Expr CCURV Statement ELSE Statement
   29          | IF . OCURV Expr CCURV Statement

    OCURV  shift, and go to state 52


State 29

   51 ParseArgs: PARSEINT . OCURV ID OSQUARE Expr CSQUARE CCURV

    OCURV  shift, and go to state 53


State 30

   32 Statement: PRINT . OCURV ExprStrlit CCURV SEMI

    OCURV  shift, and go to state 54


State 31

   34 Statement: RETURN . OptExpr SEMI

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    $default  reduce using rule 73 (Empty)

    OptExpr           go to state 63
    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 67
    Empty             go to state 68


State 32

   30 Statement: WHILE . OCURV Expr CCURV Statement

    OCURV  shift, and go to state 69


State 33

   27 Statement: OBRACE . MultipleStatements CBRACE

    DO        shift, and go to state 27
    IF        shift, and go to state 28
    PARSEINT  shift, and go to state 29
    PRINT     shift, and go to state 30
    RETURN    shift, and go to state 31
    WHILE     shift, and go to state 32
    OBRACE    shift, and go to state 33
    ID        shift, and go to state 35

    $default  reduce using rule 73 (Empty)

    Statement           go to state 70
    MultipleStatements  go to state 71
    OptAMIPA            go to state 39
    Assignment          go to state 40
    MethodInvocation    go to state 41
    ParseArgs           go to state 42
    Empty               go to state 72


State 34

   13 MethodBody: OBRACE SubMethodBody CBRACE .

    $default  reduce using rule 13 (MethodBody)


State 35

   45 Assignment: ID . ASSIGN Expr
   46 MethodInvocation: ID . OCURV OptExprCommaExprs CCURV

    OCURV   shift, and go to state 73
    ASSIGN  shift, and go to state 74


State 36

   14 SubMethodBody: SubMethodBody VarDecl .

    $default  reduce using rule 14 (SubMethodBody)


State 37

   21 VarDecl: Type . ID SubVarDecl SEMI

    ID  shift, and go to state 75


State 38

   15 SubMethodBody: SubMethodBody Statement .

    $default  reduce using rule 15 (SubMethodBody)


State 39

   33 Statement: OptAMIPA . SEMI

    SEMI  shift, and go to state 76


State 40

   39 OptAMIPA: Assignment .

    $default  reduce using rule 39 (OptAMIPA)


State 41

   40 OptAMIPA: MethodInvocation .

    $default  reduce using rule 40 (OptAMIPA)


State 42

   41 OptAMIPA: ParseArgs .

    $default  reduce using rule 41 (OptAMIPA)


State 43

   42 OptAMIPA: Empty .

    $default  reduce using rule 42 (OptAMIPA)


State 44

   18 FormalParams: STRING . OSQUARE CSQUARE ID

    OSQUARE  shift, and go to state 77


State 45

   10 MethodHeader: Type ID OCURV OptFormalParams . CCURV

    CCURV  shift, and go to state 78


State 46

   11 OptFormalParams: FormalParams .

    $default  reduce using rule 11 (OptFormalParams)


State 47

   17 FormalParams: Type . ID SubFormalParams

    ID  shift, and go to state 79


State 48

   12 OptFormalParams: Empty .

    $default  reduce using rule 12 (OptFormalParams)


State 49

    6 FieldDecl: PUBLIC STATIC Type ID SubFieldDecl SEMI .

    $default  reduce using rule 6 (FieldDecl)


State 50

    7 SubFieldDecl: SubFieldDecl COMMA . ID

    ID  shift, and go to state 80


State 51

   31 Statement: DO Statement . WHILE OCURV Expr CCURV SEMI

    WHILE  shift, and go to state 81


State 52

   28 Statement: IF OCURV . Expr CCURV Statement ELSE Statement
   29          | IF OCURV . Expr CCURV Statement

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 82


State 53

   51 ParseArgs: PARSEINT OCURV . ID OSQUARE Expr CSQUARE CCURV

    ID  shift, and go to state 83


State 54

   32 Statement: PRINT OCURV . ExprStrlit CCURV SEMI

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    STRLIT    shift, and go to state 84
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    ExprStrlit        go to state 85
    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 86


State 55

   70 Expr: BOOLLIT .

    $default  reduce using rule 70 (Expr)


State 56

   69 Expr: OCURV . Expr CCURV

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 87


State 57

   65 Expr: PLUS . Expr

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 88


State 58

   66 Expr: MINUS . Expr

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 89


State 59

   67 Expr: NOT . Expr

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 90


State 60

   71 Expr: DECLIT .

    $default  reduce using rule 71 (Expr)


State 61

   72 Expr: REALLIT .

    $default  reduce using rule 72 (Expr)


State 62

   45 Assignment: ID . ASSIGN Expr
   46 MethodInvocation: ID . OCURV OptExprCommaExprs CCURV
   68 Expr: ID . OptDotLength

    DOTLENGTH  shift, and go to state 91
    OCURV      shift, and go to state 73
    ASSIGN     shift, and go to state 74

    $default  reduce using rule 73 (Empty)

    OptDotLength  go to state 92
    Empty         go to state 93


State 63

   34 Statement: RETURN OptExpr . SEMI

    SEMI  shift, and go to state 94


State 64

   54 Expr: Assignment .

    $default  reduce using rule 54 (Expr)


State 65

   55 Expr: MethodInvocation .

    $default  reduce using rule 55 (Expr)


State 66

   56 Expr: ParseArgs .

    $default  reduce using rule 56 (Expr)


State 67

   43 OptExpr: Expr .
   57 Expr: Expr . AND Expr
   58     | Expr . OR Expr
   59     | Expr . EQ Expr
   60     | Expr . GEQ Expr
   61     | Expr . GT Expr
   62     | Expr . LEQ Expr
   63     | Expr . LT Expr
   64     | Expr . NEQ Expr

    AND  shift, and go to state 95
    OR   shift, and go to state 96
    LT   shift, and go to state 97
    GT   shift, and go to state 98
    EQ   shift, and go to state 99
    NEQ  shift, and go to state 100
    LEQ  shift, and go to state 101
    GEQ  shift, and go to state 102

    $default  reduce using rule 43 (OptExpr)


State 68

   44 OptExpr: Empty .

    $default  reduce using rule 44 (OptExpr)


State 69

   30 Statement: WHILE OCURV . Expr CCURV Statement

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 103


State 70

   35 MultipleStatements: Statement . MultipleStatements

    DO        shift, and go to state 27
    IF        shift, and go to state 28
    PARSEINT  shift, and go to state 29
    PRINT     shift, and go to state 30
    RETURN    shift, and go to state 31
    WHILE     shift, and go to state 32
    OBRACE    shift, and go to state 33
    ID        shift, and go to state 35

    $default  reduce using rule 73 (Empty)

    Statement           go to state 70
    MultipleStatements  go to state 104
    OptAMIPA            go to state 39
    Assignment          go to state 40
    MethodInvocation    go to state 41
    ParseArgs           go to state 42
    Empty               go to state 72


State 71

   27 Statement: OBRACE MultipleStatements . CBRACE

    CBRACE  shift, and go to state 105


State 72

   36 MultipleStatements: Empty .
   42 OptAMIPA: Empty .

    SEMI      reduce using rule 42 (OptAMIPA)
    $default  reduce using rule 36 (MultipleStatements)


State 73

   46 MethodInvocation: ID OCURV . OptExprCommaExprs CCURV

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    $default  reduce using rule 73 (Empty)

    Assignment         go to state 64
    MethodInvocation   go to state 65
    OptExprCommaExprs  go to state 106
    ParseArgs          go to state 66
    Expr               go to state 107
    Empty              go to state 108


State 74

   45 Assignment: ID ASSIGN . Expr

    BOOLLIT   shift, and go to state 55
    PARSEINT  shift, and go to state 29
    OCURV     shift, and go to state 56
    PLUS      shift, and go to state 57
    MINUS     shift, and go to state 58
    NOT       shift, and go to state 59
    DECLIT    shift, and go to state 60
    REALLIT   shift, and go to state 61
    ID        shift, and go to state 62

    Assignment        go to state 64
    MethodInvocation  go to state 65
    ParseArgs         go to state 66
    Expr              go to state 109


State 75

   21 VarDecl: Type ID . SubVarDecl SEMI

    COMMA  shift, and go to state 110

    $default  reduce using rule 73 (Empty)

    SubVarDecl  go to state 111
    Empty       go to state 112


State 76

   33 Statement: OptAMIPA SEMI .

    $default  reduce using rule 33 (Statement)


State 77

   18 FormalParams: STRING OSQUARE . CSQUARE ID

    CSQUARE  shift, and go to state 113


State 78

   10 MethodHeader: Type ID OCURV OptFormalParams CCURV .

    $default  reduce using rule 10 (MethodHeader)


State 79

   17 FormalParams: Type ID . SubFormalParams

    $default  reduce using rule 73 (Empty)

    SubFormalParams  go to state 114
    Empty            go to state 115


State 80

    7 SubFieldDecl: SubFieldDecl COMMA ID .

    $default  reduce using rule 7 (SubFieldDecl)


State 81

   31 Statement: DO Statement WHILE . OCURV Expr CCURV SEMI

    OCURV  shift, and go to state 116


State 82

   28 Statement: IF OCURV Expr . CCURV Statement ELSE Statement
   29          | IF OCURV Expr . CCURV Statement
   57 Expr: Expr . AND Expr
   58     | Expr . OR Expr
   59     | Expr . EQ Expr
   60     | Expr . GEQ Expr
   61     | Expr . GT Expr
   62     | Expr . LEQ Expr
   63     | Expr . LT Expr
   64     | Expr . NEQ Expr

    CCURV  shift, and go to state 117
    AND    shift, and go to state 95
    OR     shift, and go to state 96
    LT     shift, and go to state 97
    GT     shift, and go to state 98
    EQ     shift, and go to state 99
    NEQ    shift, and go to state 100
    LEQ    shift, and go to state 101
    GEQ    shift, and go to state 102


State 83

   51 ParseArgs: PARSEINT OCURV ID . OSQUARE Expr CSQUARE CCURV

    OSQUARE  shift, and go to state 118


State 84

   38 ExprStrlit: STRLIT .

    $default  reduce using rule 38 (ExprStrlit)


State 85

   32 Statement: PRINT OCURV ExprStrlit . CCURV SEMI

    CCURV  shift, and go to state 119


State 86

   37 ExprStrlit: Expr .
   57 Expr: Expr . AND Expr
   58     | Expr . OR Expr
   59     | Expr . EQ Expr
   60     | Expr . GEQ Expr
   61     | Expr . GT Expr
   62     | Expr . LEQ Expr
   63     | Expr . LT Expr
   64     | Expr . NEQ Expr

    AND  shift, and go to state 95
    OR   shift, and go to state 96
    LT   shift, and go to state 97
    GT   shift, and go to state 98
    EQ   shift, and go to state 99
    NEQ  shift, and go to state 100
    LEQ  shift, and go to state 101
    GEQ  shift, and go to state 102

    $default  reduce using rule 37 (ExprStrlit)


State 87

   57 Expr: Expr . AND Expr
   58     | Expr . OR Expr
   59     | Expr . EQ Expr
   60     | Expr . GEQ Expr
   61     | Expr . GT Expr
   62     | Expr . LEQ Expr
   63     | Expr . LT Expr
   64     | Expr . NEQ Expr
   69     | OCURV Expr . CCURV

    CCURV  shift, and go to state 120
    AND    shift, and go to state 95
    OR     shift, and go to state 96
    LT     shift, and go to state 97
    GT     shift, and go to state 98
    EQ     shift, and go to state 99
    NEQ    shift, and go to state 100
    LEQ    shift, and go to state 101
    GEQ    shift, and go to state 102


State 88

   57 Expr: Expr . AND Expr
   58     | Expr . OR Expr
   59     | Expr . EQ Expr
   60     | Expr . GEQ Expr
   61     | Expr . GT Expr
   62     | Expr . LEQ Expr
   63     | Expr . LT Expr
   64     | Expr . NEQ Expr
   65     | PLUS Expr .

    $default  reduce using rule 65 (Expr)


State 89

   57 Expr: Expr . AND Expr
   58     | Expr . OR Expr
   59     | Expr . EQ Expr
   60     | Expr . GEQ Expr
   61     | Expr . GT Expr
   62     | Expr . LEQ Expr
   63     | Expr . LT Expr
   64     | Expr . NEQ Expr
   66     | MINUS Expr .

    $default  reduce using rule 66 (Expr)


State 90

   57 Expr: Expr . AND Expr
   58     | Expr . OR Expr
   59     | Expr . EQ Expr
   60     | Expr . GEQ Expr
   61     | Expr . GT Expr
   62     | Expr . LEQ Expr
   63     | Expr . LT Expr
   64     | Expr . NEQ Expr
   67     | NOT Expr .

    $default  reduce using rule 67 (Expr)


State 91

   52 OptDotLength: DOTLENGTH .

    $default  reduce using rule 52 (OptDotLength)


State 92

   68 Expr: ID OptDotLength .

    $default  reduce using rule 68 (Expr)


State 93

   53 OptDotLength: Empty .

    $default  reduce using rule 53 (OptDotLength)


State 94

   34 Statement: RETURN OptExpr SEMI .

    $default  reduce using rule 34 (Statement)


State 95

   57 Expr: Expr AND . Expr
